--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -571,6 +571,8 @@ set(SOURCES
         db/event_helpers.cc
         db/experimental.cc
         db/external_sst_file_ingestion_job.cc
+	db/fh.cc
+#cgmin
         db/file_indexer.cc
         db/flush_job.cc
         db/flush_scheduler.cc
